<resources>
    <string name="app_name">MoneyReportV2</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Tanggal</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah</string>
    <string name="add">Tambah</string>
    <string name="save">Simpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="jumlah">Jumlah Uang</string>
    <string name="category">Kategory</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="total">Total</string>
    <string name="deskripsi">deskripsi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="kategori_pemasukan">
        <item>Utama</item>
        <item>Tambahan</item>
    </string-array>
    <string-array name="kategori_pengeluaran">
        <item>Makan</item>
        <item>Hiburan</item>
        <item>Pembayaran</item>
        <item>Pembelian Barang</item>
    </string-array>
</resources>