<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                        <TextView
                            android:id="@+id/tv_item_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/date"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/item_pemasukan"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:textSize="16sp"
                            android:layout_below="@id/tv_item_date"
                            android:textStyle="bold"
                            android:text="Pemasukan:" />

                        <TextView
                            android:id="@+id/tv_item_pemasukan"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:paddingLeft="5dp"
                            android:text="@string/pemasukan"
                            android:layout_toEndOf="@id/item_pemasukan"
                            android:layout_below="@id/tv_item_date"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            />


                        <TextView
                            android:id="@+id/item_pengeluaran"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:text="Pengeluaran:"
                            android:layout_below="@id/item_pemasukan"
                            android:textStyle="bold"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_item_pengeluaran"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:paddingLeft="5dp"
                            android:textStyle="bold"
                            android:layout_toEndOf="@id/item_pengeluaran"
                            android:layout_below="@id/tv_item_pemasukan"
                            android:text="@string/pengeluaran"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/item_total"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:text="Total:"
                            android:textStyle="bold"
                            android:layout_below="@id/item_pengeluaran"
                            android:textSize="14sp" />
                        <TextView
                            android:id="@+id/tv_item_total"
                            android:layout_width="90dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="4dp"
                            android:gravity="start"
                            android:textStyle="bold"
                            android:paddingLeft="5dp"
                            android:layout_toEndOf="@id/item_total"
                            android:layout_below="@id/tv_item_pengeluaran"
                            android:text="@string/total"
                            android:textSize="14sp" />
                </RelativeLayout>
        </androidx.cardview.widget.CardView>


</LinearLayout>